--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,10 @@
 
   <body>
     <div class="size-full">
-      <div class="main-wrapper overflow-auto w-full min-h-screen">
+      <div class="main-wrapper overflow-auto w-full min-h-screen bg-[--main-content-background]">
         <div class="flex h-full flex-col">
           <%= render 'components/navigation/header' %>
-          <div class="content-wrapper pt-16">
+          <div class="content-wrapper mt-24">
             <%= render 'shared/flash_messages' %>
             <%= yield %>
           </div>
