--- a/app/views/plreports/index.html.erb
+++ b/app/views/plreports/index.html.erb
@@ -12,7 +12,7 @@
 
 <div class="card bg-base-100 shadow-xl overflow-x-auto">
   <div class="card-body p-0">
-    <table class="table table-zebra w-full">
+    <table class="table w-full rounded-box">
       <thead>
         <tr>
           <th class="bg-base-200/50 font-bold">項目</th>
