--- a/app/views/sales_reports/_table_body.html.erb
+++ b/app/views/sales_reports/_table_body.html.erb
@@ -1,7 +1,7 @@
 <%# app/views/sales_reports/_table_body.html.erb %>
 <tbody>
   <% orders_data.each do |data| %>
-    <tr class="hover:bg-base-200/30">
+    <tr class="font-medium cursor-pointer hover:bg-base-200/40">
       <% table_columns.each do |column| %>
         <td class="<%= get_column_class(column, :cell) %>">
           <%= render_cell_value(data, column) %>
