--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto px-4 py-8">
   <h1 class="text-2xl font-bold mb-6">アカウント設定</h1>
 
-  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+  <div class="shadow-md rounded px-8 pt-6 pb-8 mb-4">
     <%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
       <%# 名前変更フォーム %>
       <div class="mb-8">
