--- a/app/views/sales_reports/_csv_import_form.html.erb
+++ b/app/views/sales_reports/_csv_import_form.html.erb
@@ -1,6 +1,6 @@
 <%# CSVインポートフォーム %>
-<div class="card card-bordered bg-base-100 shadow-md mb-6">
-  <div class="card-body p-5 space-y-5">
+<div class="card card-bordered bg-base-100 shadow-sm mb-6">
+  <div class="card-body p-5">
     <%= form_with url: import_data_imports_path, local: true, method: :post, multipart: true do |f| %>
       <div class="grid grid-cols-1 md:grid-cols-5 gap-5">
         <div class="form-control">
