--- a/app/views/sales_reports/_table.html.erb
+++ b/app/views/sales_reports/_table.html.erb
@@ -1,13 +1,13 @@
 <%# app/views/sales_reports/_table.html.erb %>
-<div class="card card-bordered bg-base-100 shadow-md mt-5">
-  <div class="card-body">
+<div class="card card-bordered bg-base-100 shadow-sm mt-5 overflow-x-auto">
+  <div class="card-body p-0">
     <%= render 'search_form' %>
-
-    <div class="overflow-x-auto">
-      <table class="table rounded-box w-full">
-        <%= render 'table_header' %>
-        <%= render 'table_body', orders_data: orders_data %>
-      </table>
+    <table class="table rounded-box w-full">
+      <%= render 'table_header' %>
+      <%= render 'table_body', orders_data: orders_data %>
+    </table>
+    <div class="flex justify-end m-4">
+      <%= paginate @orders %>
     </div>
   </div>
 </div>
