--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -6,11 +6,11 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
+
 <% content = content_tag(:button,
-  t('views.pagination.first').html_safe,
-  class: "btn join-item btn-sm",
-  "aria-label": "pagination-first",
-  disabled: current_page.first?
+  raw('<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M15.707 15.707a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 010 1.414zm-6 0a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 011.414 1.414L5.414 10l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" /></svg>'),
+  class: "join-item btn btn-sm btn-ghost hover:bg-base-200",
+  "aria-label": "最初のページ"
 ) %>
 
-<%= link_to_unless current_page.first?, content, url, remote: remote %>
+<%= link_to content, url, remote: remote, class: "no-underline" %>
