--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -6,11 +6,11 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
+
 <% content = content_tag(:button,
-  t('views.pagination.last').html_safe,
-  class: "btn join-item btn-sm",
-  "aria-label": "pagination-last",
-  disabled: current_page.last?
+  raw('<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M4.293 15.707a1 1 0 010-1.414L8.586 10 4.293 5.707a1 1 0 011.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0zm6 0a1 1 0 010-1.414L14.586 10l-4.293-4.293a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0z" clip-rule="evenodd" /></svg>'),
+  class: "join-item btn btn-sm btn-ghost hover:bg-base-200",
+  "aria-label": "最後のページ"
 ) %>
 
-<%= link_to_unless current_page.last?, content, url, remote: remote %>
+<%= link_to content, url, remote: remote, class: "no-underline" %>
