--- a/app/views/sales_reports/index.html.erb
+++ b/app/views/sales_reports/index.html.erb
@@ -1,11 +1,7 @@
 <%# app/views/sales_reports/index.html.erb %>
 <% content_for(:title, t("sales_reports.index.title")) %>
 
-<div class="w-full px-6">
+<div class="w-full p-6">
   <%= render 'csv_import_form' %>
   <%= render 'table', orders_data: @orders_data %>
-
-  <div class="mt-6">
-    <%= paginate @orders %>
-  </div>
 </div>
