表示件数の実装

--- a/app/views/sales_reports/_search_form.html.erb
+++ b/app/views/sales_reports/_search_form.html.erb
@@ -15,5 +15,21 @@
         </div>
       </div>
     <% end %>
+
+    <div class="flex justify-end mt-4 pt-4 border-t">
+      <%= form_tag sales_reports_path, method: :get, class: "flex items-center gap-2" do %>
+        <% if params[:q].present? %>
+          <% params[:q].each do |key, value| %>
+            <%= hidden_field_tag "q[#{key}]", value %>
+          <% end %>
+        <% end %>
+
+        <label class="text-sm text-gray-600">表示件数:</label>
+        <%= select_tag :per_page,
+            options_for_select([10, 30, 50, 100], @per_page),
+            class: "select select-bordered select-sm",
+            onchange: 'this.form.submit()' %>
+      <% end %>
+    </div>
   </div>
 </div>
